--- a/views/chats.pug
+++ b/views/chats.pug
@@ -24,7 +24,7 @@ html
                 .inputContainer
                     textarea(name="", id="kommentar") 
                     br
-                    button(type="button", id="commentBtn")="Kommentér"
+                    button.standard(type="button", id="commentBtn")="Kommentér"
 
             .messages
                 each message in messages
