--- a/views/login.pug
+++ b/views/login.pug
@@ -12,5 +12,5 @@ html
         input(type="text", name="username", class="username", required)
         label(for="password") Adgangskode
         input(type="password", name="password", class="password", required)
-        button(type="button", class="loginButton") Log ind
+        button.standard(type="button", class="loginButton") Log ind
     script(src="/login.js") 
