--- a/views/messages.pug
+++ b/views/messages.pug
@@ -28,5 +28,5 @@ html
                                 img.delete(src="/delete.svg")
                     else
                         p.error Beskedens emne kunne ikke findes
-            button(type="button" onclick="history.back()") Tilbage
+            button.standard(type="button" onclick="history.back()") Tilbage
     script(src="/usermessages.js")
