--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,18 +54,6 @@ form input, form select, form button {
     font-size: 1rem;
 }
 
-form button {
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-
-form button:hover {
-    background-color: #45a049;
-}
-
 footer {
     text-align: center;
     padding: 1rem;
@@ -76,38 +64,11 @@ footer {
     width: 100%;
 }
 
-a.button {
-    position: relative;
-    top: 1rem;
-    margin: 0.5rem;
-    text-decoration: none;
-    display: inline-block;
-    padding: 0.5rem 1rem;
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 4px;
-    font-size: 1rem;
-    text-align: center;
-    transition: background-color 0.3s ease;
-}
-
-a.button:hover, a.loginButton:hover {
-    background-color: #45a049;
-}
-
-a.button:active, a.loginButton:active {
-    background-color: #3e8e41;
-}
 
 a.loginButton {
-    background-color: #4CAF50;
-    text-decoration: none;
-    color: white;
+    background-color: transparent;
     cursor: pointer;
     padding: 0.5rem 1rem;
-    border-radius: 4px;
-    font-size: 1rem;
-    text-align: center;
     position: absolute;
     top: 1rem;
     right: 1rem;
@@ -115,14 +76,9 @@ a.loginButton {
 }
 
 a.usersButton{
-    background-color: #4CAF50;
-    text-decoration: none;
-    color: white;
+    background-color: transparent;
     cursor: pointer;
     padding: 0.5rem 1rem;
-    border-radius: 4px;
-    font-size: 1rem;
-    text-align: center;
     position: absolute;
     top: 1rem;
     left: 1rem;
@@ -197,7 +153,8 @@ a.subject:hover {
     color: darkblue;
 }
 
-button {
+
+button.standard, a.button {
     cursor: pointer;
     position: relative;
     top: 1rem;
@@ -205,20 +162,23 @@ button {
     text-decoration: none;
     display: inline-block;
     padding: 0.5rem 1rem;
-    background-color: #4CAF50;
-    color: white;
-    border-radius: 4px;
-    border-color: #4CAF50;
+    background-color: transparent;
+    border: none;
+    color: #226288;
     font-size: 1rem;
     text-align: center;
 }
 
-button:hover{
-    background-color: #45a049;
+button.standard:hover, a.button:hover{
+    background-color: #226288;
+    color: white;
+    border-radius: 10px;
 }
 
-button:active {
-    background-color: #3e8e41;
+button.standard:active, a.button:active {
+    background-color: #226288;
+    color: white;
+    border-radius: 10px;
 }
 
 textarea.description {
@@ -250,22 +210,13 @@ input.emne{
     font-size: 1rem;
 }
 
-button.removeSubjectBtns{
-    cursor: pointer;
-    color: #226288;
-    border: none;
-    background-color: transparent;
-    font-weight: bold;
-    font-size: 0.9rem;
-    text-decoration: none;
-}
-
 button.delete{
     background-color: transparent;
     border: none;
+    cursor: pointer;
 }
 
-img.delete{
+img.delete {
     width: 1.5rem;
     height: 1.5rem;
 }
@@ -273,5 +224,20 @@ img.delete{
 .flex-container {
     display: flex;
     align-items: center;
-    gap: 2px; /* Juster afstanden mellem elementerne */
+    gap: 2px;
+}
+
+img.users, img.logout{
+    width: 3rem;
+    height: 3rem;
+}
+
+button.removeChatBtns{
+    cursor: pointer;
+    color: #226288;
+    border: none;
+    background-color: transparent;
+    font-weight: bold;
+    font-size: 0.9rem;
+    text-decoration: none;
 }
