--- a/views/createChat.pug
+++ b/views/createChat.pug
@@ -17,5 +17,5 @@ html
                 label.beskrivelse(for="description") Beskrivelse:
                 textarea.description(id="description-input" name="description" rows="4" required)
             div
-                button(type="button", id="createChatBtn") Opret Chat
+                button.standard(type="button", id="createChatBtn") Opret Chat
     script(src="/createchat.js") 
