Tilbage button alle steder

--- a/views/chats.pug
+++ b/views/chats.pug
@@ -25,6 +25,8 @@ html
                     textarea(name="", id="kommentar") 
                     br
                     button.standard(type="button", id="commentBtn")="Kommentér"
+                button.standard(type="button" onclick="history.back()") Tilbage
+
 
             .messages
                 each message in messages
