--- a/views/users.pug
+++ b/views/users.pug
@@ -10,3 +10,4 @@ html
                 each user in users 
                     a(href="users/" + user.username) #{user.username}
                     br
+            button.standard(type="button" onclick="history.back()") Tilbage
